--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,30 +16,84 @@
         <!-- prima riga -->
         <div class="row">
             <!-- prima fila -->
-            <div>
-
+            <div class="card">
+                <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Bicycle</span>
             </div>
             <!-- seconda fila -->
-            <div>
-
+            <div class="card">
+                <img src="img/noun_Cruise_Ship_3134824.png" alt="foto Nave">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Cruise Ship</span>
             </div>
             <!-- terza fila -->
-            <div>
-
+            <div class="card">
+                <img src="img/noun_Submarine_3134738.png" alt="foto sottomarino">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Submarine</span>
             </div>
             <!-- quarta fila -->
-            <div>
-
+            <div class="card">
+                <img src="img/noun_Tractor_3134797.png" alt="foto trattore">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Tractor</span>
             </div>
         </div>
         <!-- seconda riga -->
         <div class="row">
-
+            <!-- prima fila -->
+            <div class="card">
+                <img src="img/noun_Tram_3134750.png" alt="foto tram">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Tram</span>
+            </div>
+            <!-- seconda fila -->
+            <div class="card c-baloon">
+                <img src="img/noun_air_balloon_3134741.png" alt="foto mongolfiera">
+                <span class="text-img">Air baloon</span>
+            </div>
+            <!-- terza fila -->
+            <div class="card">
+                <img src="img/noun_Tractor_3134797.png" alt="foto trattore">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Tractor</span> 
+            </div>
+            <!-- quarta fila -->
+            <div class="card">
+                <img src="img/noun_Cruise_Ship_3134824.png" alt="foto Nave">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Cruise Ship</span>
+            </div>
         </div>
         <!-- terza riga -->
         <div class="row"> 
-
+            <!-- prima fila -->
+            <div class="card">
+                <img src="img/noun_Submarine_3134738.png" alt="foto sottomarino">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Submarine</span>
+            </div>
+            <!-- seconda fila -->
+            <div class="card">
+                <img src="img/noun_Tram_3134750.png" alt="foto tram">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Tram</span>
+            </div>
+            <!-- terza fila -->
+            <div class="card">
+                <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Bicycle</span>
+            </div>
+            <!-- quarta fila -->
+            <div class="card">
+                <img src="img/noun_air_balloon_3134741.png" alt="foto mongolfiera">
+                <img src="img/pattern.png" alt="pattern delle carte">
+                <span>Air baloon</span>
+            </div> 
         </div>
+        
     </main>
 
     <footer>
