--- a/index.html
+++ b/index.html
@@ -20,83 +20,129 @@
         <div class="row">
             <!-- prima fila -->
             <div class="card">
-                <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Bicycle</span>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
             <!-- seconda fila -->
             <div class="card">
-                <img src="img/noun_Cruise_Ship_3134824.png" alt="foto Nave">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Cruise Ship</span>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
             <!-- terza fila -->
             <div class="card">
-                <img src="img/noun_Submarine_3134738.png" alt="foto sottomarino">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Submarine</span>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
             <!-- quarta fila -->
             <div class="card">
-                <img src="img/noun_Tractor_3134797.png" alt="foto trattore">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Tractor</span>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
         </div>
         <!-- seconda riga -->
         <div class="row">
             <!-- prima fila -->
             <div class="card">
-                <img src="img/noun_Tram_3134750.png" alt="foto tram">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Tram</span>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
             <!-- seconda fila -->
-            <div class="card c-baloon">
-                <img src="img/noun_air_balloon_3134741.png" alt="foto mongolfiera">
-                <span class="text-img">Air baloon</span>
+            <div class="card">
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
             <!-- terza fila -->
             <div class="card">
-                <img src="img/noun_Tractor_3134797.png" alt="foto trattore">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Tractor</span> 
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
             <!-- quarta fila -->
             <div class="card">
-                <img src="img/noun_Cruise_Ship_3134824.png" alt="foto Nave">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Cruise Ship</span>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
         </div>
         <!-- terza riga -->
-        <div class="row"> 
+        <div class="row">
             <!-- prima fila -->
             <div class="card">
-                <img src="img/noun_Submarine_3134738.png" alt="foto sottomarino">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Submarine</span>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
             <!-- seconda fila -->
             <div class="card">
-                <img src="img/noun_Tram_3134750.png" alt="foto tram">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Tram</span>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
             <!-- terza fila -->
             <div class="card">
-                <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Bicycle</span>
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
             </div>
             <!-- quarta fila -->
             <div class="card">
-                <img src="img/noun_air_balloon_3134741.png" alt="foto mongolfiera">
-                <img src="img/pattern.png" alt="pattern delle carte">
-                <span>Air baloon</span>
-            </div> 
+                <div class="pattern">
+                    <img src="img/pattern.png" alt="pattern delle carte">
+                </div>
+                <div class="img-p">
+                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
+                    <span>Bicycle</span>
+                </div>
+            </div>
         </div>
-        
+
     </main>
 
     <footer>
