--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <img src="img/pattern.png" alt="pattern delle carte">
                 </div>
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_Tractor_3134797.png" alt="foto trattore">
+                    <span>Tractor</span>
                 </div>
             </div>
             <!-- seconda fila -->
@@ -34,8 +34,8 @@
                     <img src="img/pattern.png" alt="pattern delle carte">
                 </div>
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_Submarine_3134738.png" alt="foto sottomarino">
+                    <span>Submarine</span>
                 </div>
             </div>
             <!-- terza fila -->
@@ -54,8 +54,8 @@
                     <img src="img/pattern.png" alt="pattern delle carte">
                 </div>
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_Cruise_Ship_3134824.png" alt="foto nave">
+                    <span>Cruise Ship</span>
                 </div>
             </div>
         </div>
@@ -74,8 +74,8 @@
             <!-- seconda fila -->
             <div class="card">
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_air_balloon_3134741.png" alt="foto mongolfiera">
+                    <span>Air baloon</span>
                 </div>
             </div>
             <!-- terza fila -->
@@ -84,8 +84,8 @@
                     <img src="img/pattern.png" alt="pattern delle carte">
                 </div>
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_Submarine_3134738.png" alt="foto sottomarino">
+                    <span>Submarine</span>
                 </div>
             </div>
             <!-- quarta fila -->
@@ -94,8 +94,8 @@
                     <img src="img/pattern.png" alt="pattern delle carte">
                 </div>
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_Tram_3134750.png" alt="foto tram">
+                    <span>Tram</span>
                 </div>
             </div>
         </div>
@@ -107,8 +107,8 @@
                     <img src="img/pattern.png" alt="pattern delle carte">
                 </div>
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_Cruise_Ship_3134824.png" alt="foto nave">
+                    <span>Cruise Ship</span>
                 </div>
             </div>
             <!-- seconda fila -->
@@ -117,8 +117,8 @@
                     <img src="img/pattern.png" alt="pattern delle carte">
                 </div>
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_Tram_3134750.png" alt="foto tram">
+                    <span>Tram</span>
                 </div>
             </div>
             <!-- terza fila -->
@@ -127,8 +127,8 @@
                     <img src="img/pattern.png" alt="pattern delle carte">
                 </div>
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_air_balloon_3134741.png" alt="foto mongolfiera">
+                    <span>Air baloon</span>
                 </div>
             </div>
             <!-- quarta fila -->
@@ -137,8 +137,8 @@
                     <img src="img/pattern.png" alt="pattern delle carte">
                 </div>
                 <div class="img-p">
-                    <img src="img/noun_Bicycle_3134821.png" alt="foto bicicletta">
-                    <span>Bicycle</span>
+                    <img src="img/noun_Tractor_3134797.png" alt="foto trattore">
+                    <span>Tractor</span>
                 </div>
             </div>
         </div>
@@ -146,7 +146,7 @@
     </main>
 
     <footer>
-
+        <span>From Team Boolean</span>
     </footer>
 </body>
 </html>
